[project]
name = "hexlet-code"
version = "0.1.0"  # ↑ при изменениях повышай версию
requires-python = ">=3.10"
description = "Hexlet Brain Games"
readme = "README.md"
dependencies = [
    "prompt>=0.4.1",
]

[project.scripts]
brain-games       = "brain_games.scripts.brain_games:main"
brain-even        = "brain_games.scripts.brain_even:main"
brain-calc        = "brain_games.scripts.brain_calc:main"
brain-gcd         = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime       = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["brain_games"]

# ruff (если ещё не добавлял)
[tool.ruff]
target-version = "py310"
line-length = 88
exclude = [".venv", "dist", "build", "__pycache__", ".pytest_cache"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "C90"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "lf"

[dependency-groups]
dev = [
    "ruff>=0.12.11",
]
