[project]
name = "devops-engineer-from-scratch-project-49"
version = "0.1.8"
description = "Hexlet Brain Games"
readme = "README.md"
requires-python = ">=3.10"

# зависимости для запуска игр
dependencies = [
  "prompt==0.4.1"
]

[project.scripts]
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[tool.poetry]
name = "devops-engineer-from-scratch-project-49"
version = "0.1.0"
description = "Hexlet Brain Games"
authors = ["Your Name <you@example.com>"]
packages = [{ include = "brain_games" }]

[tool.poetry.dependencies]
python = "^3.10"
prompt = "^0.4.1"

[tool.poetry.group.dev.dependencies]
flake8 = "^7.0.0"

[tool.poetry.scripts]
brain-even = "brain_games.scripts.brain_even:main"
brain-calc = "brain_games.scripts.brain_calc:main"
brain-gcd = "brain_games.scripts.brain_gcd:main"
brain-progression = "brain_games.scripts.brain_progression:main"
brain-prime = "brain_games.scripts.brain_prime:main"

[build-system]
requires = ["poetry-core>=1.8.0"]
build-backend = "poetry.core.masonry.api"
